--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,7 +3,8 @@
 //= require startbootstrap-sb-admin-2/dist/css/sb-admin-2
 //= require morrisjs/morris
 //= require font-awesome/css/font-awesome
-
+//= require leaflet.markercluster/dist/MarkerCluster
+//= require leaflet.markercluster/dist/MarkerCluster.Default
 //= require_self
 
 //= require_tree .
@@ -23,3 +24,5 @@ $icon-font-path: "bootstrap-sass-official/assets/fonts/bootstrap/";
   font-weight: normal;
   font-style: normal;
 }
+
+#map { height: 400px; }
