[#97970844] Updated leaflet includes to use protocal relative urls.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
 
     %title FDA Food Recall Dashboard
 
-    = stylesheet_link_tag 'http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css'
+    = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css'
     = stylesheet_link_tag 'application', media: 'all'
 
     = csrf_meta_tags
@@ -52,5 +52,5 @@
 
       #page-wrapper= yield
 
-    = javascript_include_tag 'http://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js'
     = javascript_include_tag 'application'
