--- a/app/views/recall_events/show.html.haml
+++ b/app/views/recall_events/show.html.haml
@@ -1,5 +1,76 @@
--# %p#notice= notice
+.row
+  .col-lg-12
+    %h1.page-header= @recall_event.recalling_firm
+    %h2= @recall_event.product_description
 
--# = link_to 'Edit', edit_recall_event_path(@recall_event)
--# \|
--# = link_to 'Back', recall_events_path
+.row
+
+  .col-lg-8
+
+    .panel.panel-default
+      .panel-heading
+        %i.fa.fa-inbox.fa-fw
+        Event Detail
+      .panel-body
+        %dl.dl-horizontal
+          %dt Event ID
+          %dd= @recall_event.event_id
+          %dt Status
+          %dd= @recall_event.status
+          %dt City
+          %dd= @recall_event.city
+          %dt State
+          %dd= @recall_event.state
+          %dt Country
+          %dd= @recall_event.country
+          %dt Voluntary/Mandated
+          %dd= @recall_event.initiated_by
+          %dt Recall Initiation Date
+          %dd= @recall_event.recall_initiation_date
+          %dt Initial Notification
+          %dd= @recall_event.initial_firm_notification
+          %dt Distribution Pattern
+          %dd= @recall_event.distribution_pattern
+
+    .panel.panel-default
+      .panel-heading
+        %i.fa.fa-list.fa-fw
+        Product Detail
+      .panel-body
+        %dl.dl-horizontal
+          %dt Code Info
+          %dd= @recall_event.code_info
+          %dt Classification
+          %dd= @recall_event.classification
+          %dt Reason for Recall
+          %dd= @recall_event.reason_for_recall
+          %dt Product Quantity
+          %dd= @recall_event.product_quantity
+          %dt Recall Number
+          %dd= @recall_event.recall_number
+
+    .panel.panel-default
+      .panel-heading
+        %i.fa.fa-map-marker.fa-fw
+        Locations
+      .panel-body
+        %h4.locations{ data: { locations: @recall_event.locations.to_json } }= @recall_event.locations.pluck(:long_name).to_sentence
+
+        #map
+
+  .col-lg-4
+
+    .panel.panel-default
+      .panel-heading
+        %i.fa.fa-compress.fa-fw
+        Related Recall Events
+      .panel-body
+        - if @related_recall_events.present?
+          .list-group
+            - @related_recall_events.each do |recall_event|
+              = link_to recall_event, class: 'list-group-item' do
+                = recall_event.recalling_firm + ' - ' + recall_event.status
+                %span.pull-right.text-muted.small
+                  %em= "#{recall_event.recall_number} - #{recall_event.report_date}"
+        - else
+          %p No related Recall Events found.
