--- a/app/views/recall_events/index.html.haml
+++ b/app/views/recall_events/index.html.haml
@@ -126,22 +126,7 @@
           #morris-donut-chart
           -# %a.btn.btn-default.btn-block{:href => "#"} View Details
 
-    .panel.panel-default
-      .panel-heading
-        %i.fa.fa-bell.fa-fw
-        Recall Events
-
-      .panel-body
-        .list-group
-          - @recall_events.each do |recall_event|
-            = link_to recall_event, class: 'list-group-item' do
-              -# %a.list-group-item
-              -# %i.fa.fa-comment.fa-fw
-              = recall_event.recalling_firm + ' - ' + recall_event.status
-              %span.pull-right.text-muted.small
-                %em= "#{recall_event.recall_number} - #{recall_event.report_date}"
-
-        -# %a.btn.btn-default.btn-block{:href => "#"} View All
+    = render partial: 'event_panel', locals: { title: 'Recall Events', icon: 'fa-bell', recall_events: @recall_events }
 
 .row
   .text-center= paginate @recall_events
