[#98298114] Added morris.js info to About page.

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -139,11 +139,21 @@
   .col-lg-4
     .panel.panel-default
       .panel-heading
+        %h4= link_to 'morris.js', 'http://morrisjs.github.io/morris.js/', target: '_blank'
+      .panel-body
+        good-looking charts shouldn't be difficult
+      .panel-footer
+        %em 0.5.1
+  .col-lg-4
+    .panel.panel-default
+      .panel-heading
         %h4= link_to 'Node.js', 'http://nodejs.org/', target: '_blank'
       .panel-body
         Node.js is a platform built on Chrome's JavaScript runtime for easily building fast, scalable network applications.
       .panel-footer
         %em 0.12.5
+
+.row
   .col-lg-4
     .panel.panel-default
       .panel-heading
@@ -152,8 +162,6 @@
         The awesome, lightweight, agile project management tool for software teams.
       .panel-footer
         %em Enterprise
-
-.row
   .col-lg-4
     .panel.panel-default
       .panel-heading
@@ -170,6 +178,8 @@
         A modern, concurrent web server for Ruby
       .panel-footer
         %em 2.11.3
+
+.row
   .col-lg-4
     .panel.panel-default
       .panel-heading
@@ -178,8 +188,6 @@
         Web development that doesn't hurt Ruby on Rails is an open-source web framework that's optimized for programmer happiness and sustainable productivity.
       .panel-footer
         %em 4.2.3
-
-.row
   .col-lg-4
     .panel.panel-default
       .panel-heading
@@ -196,6 +204,8 @@
         A dynamic, open source programming language with a focus on simplicity and productivity. It has an elegant syntax that is natural to read and easy to write.
       .panel-footer
         %em 2.2.2
+
+.row
   .col-lg-4
     .panel.panel-default
       .panel-heading
@@ -204,8 +214,6 @@
         Sass is the most mature, stable, and powerful professional grade CSS extension language in the world.
       .panel-footer
         %em 3.4.15
-
-.row
   .col-lg-4
     .panel.panel-default
       .panel-heading
