--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -27,6 +27,14 @@
   .col-lg-4
     .panel.panel-default
       .panel-heading
+        %h4= link_to 'Boot2Docker', 'https://github.com/boot2docker/boot2docker', target: '_blank'
+      .panel-body
+        Boot2Docker is a lightweight Linux distribution made specifically to run Docker containers.
+      .panel-footer
+        %em 1.7.0
+  .col-lg-4
+    .panel.panel-default
+      .panel-heading
         %h4= link_to 'Bootstrap', 'http://getbootstrap.com/', target: '_blank'
       .panel-body
         Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first projects on the web.
@@ -40,6 +48,8 @@
         A package manager for the web.
       .panel-footer
         %em 1.4.1
+
+.row
   .col-lg-4
     .panel.panel-default
       .panel-heading
@@ -48,6 +58,22 @@
         CoffeeScript is a little language that compiles into JavaScript.
       .panel-footer
         %em 1.9.3
+  .col-lg-4
+    .panel.panel-default
+      .panel-heading
+        %h4= link_to 'Docker', 'https://www.docker.com/', target: '_blank'
+      .panel-body
+        An open platform for distributed applications for developers and sysadmins
+      .panel-footer
+        %em 1.7.0
+  .col-lg-4
+    .panel.panel-default
+      .panel-heading
+        %h4= link_to 'Docker Compose', 'https://github.com/docker/compose', target: '_blank'
+      .panel-body
+        Compose is a tool for defining and running multi-container applications with Docker.
+      .panel-footer
+        %em 1.3.1
 
 .row
   .col-lg-4
@@ -230,3 +256,13 @@
         Slack brings all your communication together in one place. It's real-time messaging, archiving and search for modern teams.
       .panel-footer
         %em 1.0.5
+
+.row
+  .col-lg-4
+    .panel.panel-default
+      .panel-heading
+        %h4= link_to 'VirtualBox', 'https://www.virtualbox.org/', target: '_blank'
+      .panel-body
+        VirtualBox is a powerful x86 and AMD64/Intel64 virtualization product for enterprise as well as home use.
+      .panel-footer
+        %em 4.3.28
