[#98511892 #98512200] Fixed class color issues.  Added medium and large font size helper classes.  Added class descriptions.  Updated class boxes to use font size helpers for better responsive rendering.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,3 +28,6 @@ $icon-font-path: "bootstrap-sass-official/assets/fonts/bootstrap/";
 }
 
 #map { height: 400px; }
+
+.medium { font-size: 21px; }
+.large { font-size: 30px; }
