Added eyestreet solutions description to about page.

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -5,6 +5,7 @@
 .row
   .col-lg-12
     %h2 Eye Street Solutions
+    %p Eye Street Solutions is a small business that has been providing software engineering services to the Federal government for nearly 20 years. We have consistently been at the leading edge of adoption for open source technologies (e.g. Tomcat, Apache, Struts, Hibernate, Ruby on Rails, MongoDB, Drupal, Nginx, Bootstrap), cloud platforms (e.g. Heroku, AWS GovCloud), and the Agile development process at agencies we support.
     %address
       %br
       = link_to 'http://www.eyestreet.com', 'http://www.eyestreet.com'
